# tactus-leafgen

./: .gitignore  Cargo.toml  README.md
docs/: flower-research.md
src/: blade.rs  compound.rs  flower.rs  gallery.rs  ginkgo.rs  lib.rs  main.rs  major.rs  monocot.rs  palmate.rs  peltate.rs  raster.rs  rng.rs  svg.rs  vec2.rs  venation.rs  wasm.rs
tests/: vein_containment.rs
web/: build.sh  index.html
